# research-tracker

./: .gitignore  README.md  main.py  pyproject.toml
frontend/: .gitignore  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/discovery/: layout.tsx
frontend/src/app/discovery/community/: page.tsx
frontend/src/app/discovery/math-insights/: page.tsx
frontend/src/app/usage/: page.tsx
frontend/src/components/: BrainstormSessionCard.tsx  DiscoveryPanel.tsx  IdeaCard.tsx  InsightsPanel.tsx  MathMarkdown.tsx  Pagination.tsx  PaperCard.tsx  PaperDetailModal.tsx  PaperTable.tsx  PaperToolbar.tsx  ReportViewer.tsx  ResearchPlanCard.tsx  ResearchPlanToolbar.tsx  ResearchPlanViewer.tsx  ReviewScorePanel.tsx  SessionList.tsx  TopicCard.tsx  TopicForm.tsx  TranslateButton.tsx  VerificationResults.tsx
frontend/src/lib/: api.ts
scripts/: install_cron.sh  run.sh
src/paper_tracker/: brainstorm.py  chat.py  config.py  discovery.py  insights.py  llm.py  main.py  rag.py  registry.py  report.py  research_plan.py  scheduler.py  server.py  storage.py  summarizer.py  usage.py
src/paper_tracker/notifiers/: email.py  toast.py
src/paper_tracker/sources/: arxiv.py  github.py  huggingface.py  openalex.py  openreview_api.py  paperswithcode.py  web.py
tests/: test_brainstorm_discovery.py  test_discovery.py  test_quality_review.py  test_registry_discovery.py  test_server.py  test_server_discovery.py  test_sources.py  test_storage.py  test_summarizer.py
(+8 files in other folders)
