[project]
name = "paper-tracker"
version = "0.1.0"
description = "Daily paper tracker for interactive video generation / world model research"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "apscheduler>=3.10",
    "ddgs>=9.11.2",
    "openai>=2.26.0",
    "numpy>=2.4.3",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
paper-tracker = "paper_tracker.main:main"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_tracker"]
